--- a/ASC-STUDENT_APP/package.json
+++ b/ASC-STUDENT_APP/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/viewpager": "^5.0.11",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-bottom-tabs": "^6.2.19",
+    "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
     "@react-navigation/stack": "^6.3.20",
@@ -26,6 +27,7 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.1",
     "react-native-web": "~0.19.6"
   },
